# scale-free-flow

./: LICENSE  README.md
code/: CMakeLists.txt  clustering.cpp  details.cpp  gh-profile.cpp  other_applications.cpp  pairs.cpp  runtime.cpp  sandbox.cpp  sandbox2.cpp  scalingGHonGIRGs.cpp  show_search.cpp
code/include/: BoykovKolmogorov.h  Dinics.h  DinicsStats.h  ProgressIndicator.hpp  PushRelabel.h  ScopedTimer.hpp  common.h.in  ghtree.h  minimalDinics.h  utils.h
code/source/: BoykovKolmogorov.cpp  Dinics.cpp  DinicsStats.cpp  PushRelabel.cpp  ghtree.cpp  minimalDinics.cpp  utils.cpp
code/source/bk/: graph.h  instances.inc
code/tests/: CMakeLists.txt  global_network_data.hpp  test_boykov_kolmogorov.cpp  test_dinics.cpp  test_ghtree.cpp  test_push_relabel.cpp  test_rational_weights.cpp  test_utils.cpp
plots/: paper_gh_barchart.ipynb  paper_runtime-others.ipynb  paper_runtime.ipynb  paper_runtime2.ipynb  paper_runtime3.ipynb  paper_scaling.ipynb  paper_space.ipynb  paper_space2.ipynb  random_pairs_single.ipynb  random_space.ipynb  stats.txt  test_plots.ipynb
